# PythonLearnP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/learnpyapp/: api.py  main.py
src/learnpyapp/api/v1/: router.py
src/learnpyapp/api/v1/endpoints/: auth.py  health.py
src/learnpyapp/core/: config.py  database.py  logging.py  request_id.py  security.py
src/learnpyapp/middlewares/: request_id.py  request_id_middleware.py
src/learnpyapp/models/: user.py
tests/: conftest.py  test_health.py  test_request_id_middleware.py
