# 妝 Python proje yap覺land覺rmas覺 (setuptools, ba覺ml覺l覺klar, kalite ara癟lar覺)

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learnpyapp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
]

[tool.setuptools]
package-dir = {"" = "src"}  # Kod src klas繹r羹nde

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
  "pytest",
  "httpx",
]

# -------------------------------
# Kod Kalitesi Ara癟lar覺
# -------------------------------

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ANN"]
ignore = ["E501"]  # Sat覺r uzunluu uyar覺lar覺n覺 yok say

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true
strict_equality = true
no_implicit_optional = true
